--- a/A5/src/submission/mingpt-demo/play_char.ipynb
+++ b/A5/src/submission/mingpt-demo/play_char.ipynb
@@ -10,6 +10,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -152,7 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "08/24/2020 22:59:58 - INFO - mingpt.model -   number of parameters: 2.535219e+07\n"
+      "08/23/2022 14:59:42 - INFO - mingpt.model -   number of parameters: 2.535219e+07\n"
      ]
     }
    ],
@@ -167,18 +172,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/2179 [00:00<?, ?it/s]/apcv/shared/conda-envs/apcv-6244e1d-566/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:61: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "epoch 1 iter 2178: train loss 0.33318. lr 3.000169e-04: 100%|██████████| 2179/2179 [09:22<00:00,  3.88it/s]\n",
-      "epoch 2 iter 2178: train loss 0.17447. lr 6.000000e-05: 100%|██████████| 2179/2179 [08:45<00:00,  4.15it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mingpt.trainer import Trainer, TrainerConfig\n",
     "\n",
@@ -192,91 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O God, O God! that e'er this tongue of mine,\n",
-      "That laid the sentence of dread banishment\n",
-      "On yon proud man, should take it off again\n",
-      "With words of sooth! O that I were as great\n",
-      "As is my grief, or lesser than my name!\n",
-      "Or that I could forget\n",
-      "With Richmond, I'll tell you what I am,\n",
-      "The Lord Aumerle, .\n",
-      "\n",
-      "CLAUDIO:\n",
-      "The prenzie Angelo!\n",
-      "\n",
-      "ISABELLA:\n",
-      "O, 'tis the cunning livery of hell,\n",
-      "The damned'st body to invest and cover\n",
-      "In prenzie guards! Dost thou think, Claudio?\n",
-      "If I would yield him my virginity,\n",
-      "Thou mightst be freed.\n",
-      "\n",
-      "CLAUDIO:\n",
-      "O heavens! it cannot be.\n",
-      "\n",
-      "ISABELLA:\n",
-      "Yes, he would give't thee, from this rank offence,\n",
-      "So to offend him still. This night's the time\n",
-      "That I should do what I abhor to name,\n",
-      "Or else thou diest to-morrow.\n",
-      "\n",
-      "CLAUDIO:\n",
-      "Thou shalt not do't.\n",
-      "\n",
-      "ISABELLA:\n",
-      "O, were it but my life,\n",
-      "I'ld throw it down for your deliverance\n",
-      "As frankly as a pin.\n",
-      "\n",
-      "CLAUDIO:\n",
-      "Thanks, dear Isabel.\n",
-      "\n",
-      "ISABELLA:\n",
-      "Be ready, Claudio, for your death tomorrow.\n",
-      "\n",
-      "CLAUDIO:\n",
-      "Yes. Has he affections\n",
-      "That profit us.\n",
-      "\n",
-      "DUKE VINCENTIO:\n",
-      "By the world they see the word in 's doom.\n",
-      "\n",
-      "ANGELO:\n",
-      "Thou art the like, thus hate the course in heaven.\n",
-      "What foul hath bled the wheel or at wild,\n",
-      "And wash him fresh again with true-love tears.\n",
-      "Ah, thou, the model where old Troy did stand,\n",
-      "Thou map of honour, thou King Richard's tomb,\n",
-      "And not King Richard; thou most beauteous inn,\n",
-      "Why should hard-favour'd grief be lodged in thee,\n",
-      "When triumph is become an alehouse guest?\n",
-      "\n",
-      "KING RICHARD II:\n",
-      "Join not with grief, fair woman, do not so,\n",
-      "To make my end too sudden: learn, good soul,\n",
-      "To think our former state a happy dream;\n",
-      "From which awaked, the truth of what we are\n",
-      "Shows us but this: I am sworn brother, sweet,\n",
-      "To grim Necessity, and he and I\n",
-      "Will keep a league till death. Hie thee to France\n",
-      "And cloister thee in some religious house:\n",
-      "Our holy lives must win a new world's crown,\n",
-      "Which our profane hours here have stricken down.\n",
-      "\n",
-      "QUEEN:\n",
-      "What, is my Richard both in shape and mind\n",
-      "Transform'd and weaken'd? hath Bolingbroke deposed\n",
-      "Thine intellect? hath h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# alright, let's sample some character-level Shakespeare\n",
     "from mingpt.utils import sample\n",
@@ -300,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +226,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "65fea88e805a51b3561e33da7d04bc2dc220cc68da3f47aaa6d51a0c4c74d2fe"
+   }
   }
  },
  "nbformat": 4,
